[project]
name = "mktotp"
version = "0.8.4"
description = "A Simple TOTP token generator for use with 2FA services."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "kanok-one", email = "zervoid77@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "filelock>=3.18.0",
    "opencv-python>=4.12.0.88",
    "pyotp>=2.9.0",
]

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "debugpy>=1.8.16",
    "pytest>=8.4.1",
]
