[project]
name = "mktotp"
version = "0.9.4"
description = "A Simple TOTP Secret Manager with MCP Server Support"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "kanok-one", email = "zervoid77@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "cairosvg>=2.8.2",
    "fastmcp>=2.11.3",
    "filelock>=3.18.0",
    "opencv-python>=4.12.0.88",
    "pillow>=10.0.0",
    "pydantic>=2.11.7",
    "pyotp>=2.9.0",
]

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "debugpy>=1.8.16",
    "pytest>=8.4.1",
    "pytest-asyncio>=0.25.0",
]
